# Agentic_Ai

01-FastApi/1-Hello_World_In_FastApi/hello_world/: pyproject.toml
01-FastApi/1-Hello_World_In_FastApi/hello_world/hello_world/: main.py
01-FastApi/1-Hello_World_In_FastApi/hello_world/tests/: test_firstproject.py
