[project]
name = "hello-world"
version = "0.1.0"
description = ""
authors = [
    {name = "Nomanyousaf07",email = "nomanyousaf712@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
